# MonteCarlo_Roulette_Analysis

./: .gitignore  EU Roulette.py  README.md  Roulette.py  bets.py  dashboard.py  evaluator.py  methods.py  player.py  pyproject.toml  session.py  simulation.py  wheel.py
docs/: POWER_BI_DASHBOARD.md
examples/: run_sample.py
src/roulette_simulator/: __init__.py  analytics.py  bets.py  cli.py  configuration.py  evaluator.py  export.py  player.py  powerbi.py  session.py  simulation.py  strategies.py  wheel.py
tests/: test_roulette_simulator.py
